<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Display (e-ink)">
        <SwitchPreferenceCompat
            app:key="eink_enabled"
            app:title="@string/settings_eink_mode"
            app:summary="@string/settings_eink_summary"
            app:defaultValue="true" />

        <SeekBarPreference
            app:key="font_boost"
            app:title="@string/settings_font_boost"
            app:min="0"
            android:max="50"
            app:defaultValue="15"
            app:showSeekBarValue="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="Location">
        <Preference
            app:key="location_status"
            app:title="@string/settings_location"
            app:summary="@string/settings_location_summary"
            app:selectable="false" />
    </PreferenceCategory>

    <PreferenceCategory app:title="Power">
        <SwitchPreferenceCompat
            app:key="screen_on_during_trip"
            app:title="@string/settings_screen_on_during_trip"
            app:summary="@string/settings_screen_on_summary"
            app:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_about">
        <Preference
            app:key="about_version"
            app:title="@string/settings_version"
            app:summary="0.1.0" />
        <Preference
            app:key="about_license"
            app:title="License"
            app:summary="@string/settings_license" />
        <Preference
            app:key="about_source"
            app:title="Source"
            app:summary="@string/settings_source" />
    </PreferenceCategory>
</PreferenceScreen>