<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ink_bg">

    <FrameLayout
        android:id="@+id/webview_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/toggle_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/toggle_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/ink_bg"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/tab_rides"
            style="@style/InkberTab"
            android:text="@string/tab_rides" />

        <Button
            android:id="@+id/tab_eats"
            style="@style/InkberTab"
            android:text="@string/tab_eats" />

        <Button
            android:id="@+id/tab_settings"
            style="@style/InkberTab"
            android:text="@string/tab_settings" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>